; ModuleID = '/home/carl/AnghaBench/radare2/libr/io/p/extr_io_gdb.c___close.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/io/p/extr_io_gdb.c___close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }
%struct.TYPE_4__ = type { i32 }

@desc = common dso_local global i32 0, align 4
@riogdb = common dso_local global %struct.TYPE_5__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @__close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__close(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %4 = icmp ne %struct.TYPE_4__* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @R_FREE(i32 %8)
  br label %10

10:                                               ; preds = %5, %1
  %11 = load i32, i32* @desc, align 4
  %12 = call i32 @gdbr_disconnect(i32 %11)
  %13 = load i32, i32* @desc, align 4
  %14 = call i32 @gdbr_cleanup(i32 %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** @riogdb, align 8
  %16 = icmp ne %struct.TYPE_5__* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %10
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** @riogdb, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  store i32* null, i32** %19, align 8
  br label %20

20:                                               ; preds = %17, %10
  %21 = load i32, i32* @desc, align 4
  %22 = call i32 @R_FREE(i32 %21)
  ret i32 -1
}

declare dso_local i32 @R_FREE(i32) #1

declare dso_local i32 @gdbr_disconnect(i32) #1

declare dso_local i32 @gdbr_cleanup(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
